--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore:
   equatable:
   firebase_auth: ^4.6.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
