--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable:
   firebase_auth: ^4.6.2
   fluttertoast: ^8.2.2
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
